@@ -2289,23 +2289,25 @@ $1',
 'blanknamespace' => '(Main)',
 
 # Contributions
-'contributions' => 'User contributions',
-'mycontris'     => 'My contributions',
-'contribsub2'   => 'For $1 ($2)',
-'nocontribs'    => 'No changes were found matching these criteria.',
-'uctop'         => '(top)',
-'month'         => 'From month (and earlier):',
-'year'          => 'From year (and earlier):',
+'contributions'       => 'User contributions',
+'contributions-title' => 'User contributions for $1',
+'mycontris'           => 'My contributions',
+'contribsub2'         => 'For $1 ($2)',
+'nocontribs'          => 'No changes were found matching these criteria.',
+'uctop'               => '(top)',
+'month'               => 'From month (and earlier):',
+'year'                => 'From year (and earlier):',
 
-'sp-contributions-newbies'     => 'Show contributions of new accounts only',
-'sp-contributions-newbies-sub' => 'For new accounts',
-'sp-contributions-blocklog'    => 'Block log',
-'sp-contributions-search'      => 'Search for contributions',
-'sp-contributions-username'    => 'IP Address or username:',
-'sp-contributions-submit'      => 'Search',
-'sp-contributions-explain'     => '', # only translate this message to other languages if you have to change it
-'sp-contributions-footer'      => '-', # do not translate or duplicate this message to other languages
-'sp-contributions-footer-anon' => '-', # do not translate or duplicate this message to other languages
+'sp-contributions-newbies'       => 'Show contributions of new accounts only',
+'sp-contributions-newbies-sub'   => 'For new accounts',
+'sp-contributions-newbies-title' => 'User contributions for new accounts',
+'sp-contributions-blocklog'      => 'Block log',
+'sp-contributions-search'        => 'Search for contributions',
+'sp-contributions-username'      => 'IP Address or username:',
+'sp-contributions-submit'        => 'Search',
+'sp-contributions-explain'       => '', # only translate this message to other languages if you have to change it
+'sp-contributions-footer'        => '-', # do not translate or duplicate this message to other languages
+'sp-contributions-footer-anon'   => '-', # do not translate or duplicate this message to other languages
 
 # What links here
 'whatlinkshere'            => 'What links here',
